[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tsugi"
version = "0.1.1"
description = "Unified developer surface for TsugiCinema's open-source distributed-training SDKs. pip install tsugi pulls tsugi-mend (Apache-2.0; patent-independent) and tsugi-kpool (Apache-2.0; patent-aligned) and re-exports both under one namespace."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tong Liu", email = "tong@tsugicinema.com" }]
keywords = ["pytorch", "distributed-training", "cross-rack", "lora", "peft", "decoupled-diloco", "k-pool-lora", "infinity"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tsugi-mend==0.1.3",
    "tsugi-kpool==0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://tsugilabs.ai"
"Repository" = "https://github.com/tsugiai/tsugi"
"Companion-SDK-Mend" = "https://github.com/tsugiai/tsugi-mend"
"Companion-SDK-KPool" = "https://github.com/tsugiai/tsugi-kpool"

[tool.hatch.build.targets.wheel]
packages = ["src/tsugi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
